--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
-.h linguist-language=C++
-.cpp linguist-language=C++
-Makefile linguist-language=C++
+Makefile linguist-language=Makefile
+
+CMakeFiles/** linguist-vendored
+*.o linguist-vendored
+
+*.h linguist-language=C++
+*.cpp linguist-language=C++
